Requires:
~~~~~~~~~
- CPSCore > 3.21.2
- CPSCompat >= 0.1.0
- CPSBoxes >= 0.0.1
- CPSSchemas > 0.40.0
- CPSDocument > 0.33.0
- to use the new filter set default_languages requires to remove an index:
  zmi: portal_catalog/indexes/ select cps_filter_sets ->Remove index
  then launch the cpsupdate external method
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- fix: the BMP bug (#305) in getImgTag.py
- fix: creating a document with a title that contains a meaningless word 
  raise an IndexError
- Modified the code of the JavaScript method from functions.js, showElement, to
  be more generic (this fixes problems notably in CPSSchemas).
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Reverted DocRenderBox.getContent() naming to DocRenderBox.getContents() to
  be consistent with other boxes and not be confused with proxy.getContent().
- manageCPSLanguage method is now in CPSDefault.utils
- Factorized code from CPSDefault/skins/cps_default/computeId to the method
  CPSUtil.id.generateId.
- Boxes related are moved to CPSBoxes
- new index fieldIndex Language, so you can query:
    query['Language'] = ['fr', 'it']
- new filter set: default_languages that matches all proxies in their default 
  languages:
    query['cps_filter_sets'] = {'query': ('searchable', 'default_languages'),
                                'operator': 'and'}
  or using skin/cps_default/search.py:
    brains = portal.search(query={'path': '/cps/workspaces/folder1'},
                           default_languages=1)
- Made portal creation form more robust.